# Group-Work-Favorita-Forecasting

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  train_data_quality_report.html  your_report.html
.github/workflows/: ci.yml
configs/: COLORS.yaml
data/processed/: items.parquet
notebooks/: Colortest.ipynb  EDA.ipynb  ph_EDA.ipynb
notes/: README.md
pandasai_app/: app.py  requirements.txt
pandasai_app/cache/: cache_db_0.11.db  cache_db_0.11.db.wal
reports/: holidays_events_report.html  index.html  items_report.html  oil_report.html  stores_report.html  transactions_report.html
reports/plotly/config/: color_themes.html  colors_themes.html
reports/plotly/eda/: Average_Sales_by_Weekday.html  Store_Activity_Heatmap.html  Top_Stores_Over_Time.html  daily_sales_vs_oil_prices.html  global_weekly_sales_seasonality.html  item_1976284_sales_vs_transactions.html  item_1976284_units_per_transaction.html  store_volume_vs_volatility.html
reports/ydata/: holidays_events_report.html
src/Favorita_TSA/: color.py  data_loader.py  dataset.py  dqr.py  eda.py  pandasai_runner.py  preprocess_eda.py  profile_report.py
src/Favorita_TSA/utils/: data_loader.py  dataset.py
src/Favorita_TSA/viz/: color_manager.py  ploty_export.py  ploty_theme.py
src/streamlit_app/: app.py
src/streamlit_app/.streamlit/: config.toml
src/streamlit_app/backup/: Forecast_Candidates_Analysis.py  forecast_candidates.py  store_item.py  store_item_performance.py  stores.py  test.py
src/streamlit_app/pages/: item_level.py  multi_stores.py  store_item_analyse.py  (+1 more)
